--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "victory-native": "^41.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
